--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ requires-python = ">=3.12"
 dependencies = [
     "streamlit (>=1.43.2,<2.0.0)",
     "gpxpy (>=1.6.2,<2.0.0)",
-    "pandas (>=2.2.3,<3.0.0)"
+    "pandas (>=2.2.3,<3.0.0)",
+    "pillow (>=11.1.0,<12.0.0)",
+    "piexif (>=1.1.3,<2.0.0)"
 ]
 
 
