--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,8 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.poetry]
-dependencies-external = [
-    "python3-tk"
-]
+#
+#[tool.poetry]
+#dependencies-external = [
+#    "python3-tk"
+#]
