--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pillow (>=11.1.0,<12.0.0)",
     "piexif (>=1.1.3,<2.0.0)",
     "sqlalchemy (>=2.0.40,<3.0.0)",
+    "notebook (>=7.3.3,<8.0.0)",
 ]
 
 
