--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "piexif (>=1.1.3,<2.0.0)",
     "sqlalchemy (>=2.0.40,<3.0.0)",
     "notebook (>=7.3.3,<8.0.0)",
+    "pydantic (>=2.11.7,<3.0.0)"
 ]
 
 
