--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "simple-local-gallery"
+name = "slg-server"
 version = "0.1.0"
 description = "Simple local gallery"
 authors = [
@@ -7,24 +7,64 @@ authors = [
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0"
 dependencies = [
-    "streamlit (>=1.43.2,<2.0.0)",
     "gpxpy (>=1.6.2,<2.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
     "pillow (>=11.1.0,<12.0.0)",
     "piexif (>=1.1.3,<2.0.0)",
-    "sqlalchemy (>=2.0.40,<3.0.0)",
-    "notebook (>=7.3.3,<8.0.0)",
-    "pydantic (>=2.11.7,<3.0.0)"
+    
+    "fastapi[standard]<1.0.0,>=0.114.2",
+    "python-multipart<1.0.0,>=0.0.7",
+    "email-validator<3.0.0.0,>=2.1.0.post1",
+    "passlib[bcrypt]<2.0.0,>=1.7.4",
+    "tenacity<9.0.0,>=8.2.3",
+    "pydantic>2.0",
+    "httpx<1.0.0,>=0.25.1",
+    "bcrypt==4.3.0",
+    "pydantic-settings<3.0.0,>=2.2.1",
 ]
 
+[tool.uv]
+dev-dependencies = [
+    # "pytest<8.0.0,>=7.4.3",
+    "mypy<2.0.0,>=1.8.0",
+    "ruff<1.0.0,>=0.2.2",
+    "pre-commit<4.0.0,>=3.6.2",
+    "types-passlib<2.0.0.0,>=1.7.7.20240106",
+    # "coverage<8.0.0,>=7.4.3",
+]
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
-#
-#[tool.poetry]
-#dependencies-external = [
-#    "python3-tk"
-#]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.mypy]
+strict = true
+exclude = ["venv", ".venv", "alembic"]
+
+[tool.ruff]
+target-version = "py310"
+exclude = ["slg-client"]
+
+[tool.ruff.lint]
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "UP",  # pyupgrade
+    "ARG001", # unused arguments in functions
+]
+ignore = [
+    "E501",  # line too long, handled by black
+    "B008",  # do not perform function calls in argument defaults
+    "W191",  # indentation contains tabs
+    "B904",  # Allow raising exceptions without from e, for HTTPException
+]
+
+[tool.ruff.lint.pyupgrade]
+# Preserve types, even if a file imports `from __future__ import annotations`.
+keep-runtime-typing = true
