--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "generate-api-client": "openapi-ts"
   },
   "dependencies": {
     "@fontsource/roboto": "5.2.6",
     "@mdi/font": "7.4.47",
+    "axios": "^1.11.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
     "vuetify": "^3.9.1"
   },
   "devDependencies": {
+    "@hey-api/openapi-ts": "^0.82.1",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.2.3",
