--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
     "pillow (>=11.1.0,<12.0.0)",
     "piexif (>=1.1.3,<2.0.0)",
-    
     "fastapi[standard]<1.0.0,>=0.114.2",
     "python-multipart<1.0.0,>=0.0.7",
     "email-validator<3.0.0.0,>=2.1.0.post1",
@@ -23,6 +22,7 @@ dependencies = [
     "httpx<1.0.0,>=0.25.1",
     "bcrypt==4.3.0",
     "pydantic-settings<3.0.0,>=2.2.1",
+    "sqlalchemy>=2.0.43,<3.0.0",
 ]
 
 [tool.uv]
