init leaflet map

--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@hey-api/openapi-ts": "^0.82.1",
     "@pinia/colada-devtools": "^0.1.6",
     "@tsconfig/node22": "^22.0.0",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.30.1",
     "eslint-config-vuetify": "^4.0.0",
+    "leaflet": "^1.9.4",
     "npm-run-all2": "^7.0.2",
     "sass-embedded": "^1.89.2",
     "typescript": "~5.8.3",
