--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-PROJECT_NAME=Simple Local GAllery
+PROJECT_NAME=Simple Local Gallery
 FIRST_SUPERUSER=admin@lysz210.it
 FIRST_SUPERUSER_PASSWORD=changethis
