--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "bcrypt==4.3.0",
     "pydantic-settings<3.0.0,>=2.2.1",
     "sqlalchemy>=2.0.43,<3.0.0",
+    "google-genai>=1.38.0,<2.0.0",
 ]
 
 [tool.uv]
