--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,11 +19,12 @@ dependencies = [
     "passlib[bcrypt]<2.0.0,>=1.7.4",
     "tenacity<9.0.0,>=8.2.3",
     "pydantic>2.0",
-    "httpx<1.0.0,>=0.25.1",
+    "httpx>=0.25.1,<1.0.0",
     "bcrypt==4.3.0",
     "pydantic-settings<3.0.0,>=2.2.1",
     "sqlalchemy>=2.0.43,<3.0.0",
     "google-genai>=1.38.0,<2.0.0",
+    "authlib>=1.6.4",
 ]
 
 [tool.uv]
